--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <head>
-<title>Love Earth ❤️</title>
-
+  <meta charset="UTF-8">
+  <meta name="description" content="Many things you can do to help save our planet">
+  <meta name="keywords" content="Nature, Planet, Earth , Save">
+  <meta name="author" content="Pouya">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Love Earth ❤️</title>
 </head>
 
 Love earth 🌍❤️
