--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
   <meta name="description" content="Many things you can do to help save our planet">
   <meta name="keywords" content="Nature, Planet, Earth , Save">
