--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <br>
 -- How? / چگونه؟ /
 <br>
-هوا / آب / خاک / صوت
+<a href="/air.html/" title="هوا">هوا</a> / آب / خاک / صوت
 <br>
 Soil / Air / Water / Noice
