--- a/air.html
+++ b/air.html
@@ -7,20 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>هوا ❤️</title>
 </head>
+<p dir="rtl" style="text-align: justify;">اصولاً هوا چیست؟<br />
+<br />
+یک تعریف ساده همان چیزی است که هوا یا اتمسفر همه وقت شبیه آن است. مهم نیست که هوا سرد، خنک، گرم، داغ، آرام، نسیم وار، بادی، خشک، مرطوب یا بارانی باشد. در هر حال می تواند ترکیبی از مقداری حرارت، رطوبت و حرکت باشد.هوا ساعت به ساعت، روز به روز، فصل به فصل و حتی سال به سال تغییر می کند.هوا تركیبی از گازها است كه زمین را احاطه كرده اند.هوا اغلب جو نامیده می شود.هوا خشكی و دریا را فراگرفته و تا منطقه دوری بالای سطح زمین می رسد.ما نمی توانیم آن را ببینیم، ببوییم یا مزه كنیم. موقعی كه باد می وزد شما هوا را در مقابل بدنتان احساس می كنید.بدون هوا، امكان حیات بر روی زمین وجود نداشت. چراكه همه موجودات زنده به هوا نیاز دارند تا زنده بمانند.<br />
+<br />
+شما همین حالا هم هوا را تنفس می كنید. شما باید هوا را تنفس كنید تا زنده بمانید. تغییرات روزانه به وسیله طوفان ها و هوای ناپایداری که بر بالای سطح زمین حرکت می کند، پدید می آید.<br />
+تغییرات و دگرگونی های فصلی به علت گردش زمین به دور خورشید به وجود می آید. ولی علت تغییرات سال به سال هوا هنوز شناخته نشده و معلوم نیست.مهم ترین علت دگرگونی هوا همانا گرم و سرد شدن هوای (جو) است که گرما، باد و همچنین طریق ظاهر شدن بخار آب را در اتمسفر باعث می شود.<br />
+<br />
+رطوبت که به صورت بخار آب در هوا می باشد با درجه حرارت ترکیب گردیده، شرایط مختلف آب و هوا را سبب می گردد. ابرها خود نوعی از شرایط تغییر در آب و هوا هستند که هنگام انقباض بخار آب در بالای زمین تشکیل می شوند.وقتی که قطرات کوچک ابر بزرگتر و خیل سنگین گردیده و دیگر نگاه داری آن ها به وسیله جریان هوا ممکن نباشد، به زمین می ریزند.اگر قطرات باران از لایه یا طبقه ای از هوا یا جو که درجه حرارت آن پایین تر از درجه انجماد باشد، فرو ریزند قطرات منجمد شده و هوا برفی می گردد. گازهای اصلی موجود درهوا نیتروژن و اكسیژن هستند. نیتروژن تقریباً چهار پنجم حجم هوا را تشكیل می دهد.اكسیژن حدود یك پنجم آن را تشكیل می دهد. هوا حاوی مقادیر ریزی از گازهای دیگر مخصوصاً آرگون هم هست.</p>
 
-اصولاً هوا چیست؟
-یک تعریف ساده همان چیزی است که هوا یا اتمسفر همه وقت شبیه آن است. مهم نیست که هوا سرد، خنک، گرم، داغ، آرام، نسیم وار، بادی، خشک، مرطوب یا بارانی باشد. در هر حال می تواند ترکیبی از مقداری حرارت، رطوبت و حرکت باشد.
-هوا ساعت به ساعت، روز به روز، فصل به فصل و حتی سال به سال تغییر می کند.
-هوا تركیبی از گازها است كه زمین را احاطه كرده اند.
-هوا اغلب جو نامیده می شود.
-هوا خشكی و دریا را فراگرفته و تا منطقه دوری بالای سطح زمین می رسد.
-ما نمی توانیم آن را ببینیم، ببوییم یا مزه كنیم. موقعی كه باد می وزد شما هوا را در مقابل بدنتان احساس می كنید.
-بدون هوا، امكان حیات بر روی زمین وجود نداشت. چراكه همه موجودات زنده به هوا نیاز دارند تا زنده بمانند.
-شما همین حالا هم هوا را تنفس می كنید. شما باید هوا را تنفس كنید تا زنده بمانید. تغییرات روزانه به وسیله طوفان ها و هوای ناپایداری که بر بالای سطح زمین حرکت می کند، پدید می آید.
-تغییرات و دگرگونی های فصلی به علت گردش زمین به دور خورشید به وجود می آید. ولی علت تغییرات سال به سال هوا هنوز شناخته نشده و معلوم نیست.
-مهم ترین علت دگرگونی هوا همانا گرم و سرد شدن هوای (جو) است که گرما، باد و همچنین طریق ظاهر شدن بخار آب را در اتمسفر باعث می شود.
-رطوبت که به صورت بخار آب در هوا می باشد با درجه حرارت ترکیب گردیده، شرایط مختلف آب و هوا را سبب می گردد. ابرها خود نوعی از شرایط تغییر در آب و هوا هستند که هنگام انقباض بخار آب در بالای زمین تشکیل می شوند.
-وقتی که قطرات کوچک ابر بزرگتر و خیل سنگین گردیده و دیگر نگاه داری آن ها به وسیله جریان هوا ممکن نباشد، به زمین می ریزند.
-اگر قطرات باران از لایه یا طبقه ای از هوا یا جو که درجه حرارت آن پایین تر از درجه انجماد باشد، فرو ریزند قطرات منجمد شده و هوا برفی می گردد. گازهای اصلی موجود درهوا نیتروژن و اكسیژن هستند. نیتروژن تقریباً چهار پنجم حجم هوا را تشكیل می دهد.
-اكسیژن حدود یك پنجم آن را تشكیل می دهد. هوا حاوی مقادیر ریزی از گازهای دیگر مخصوصاً آرگون هم هست.
-
+<p dir="rtl" style="text-align: justify;">&nbsp;</p>
