--- a/air.html
+++ b/air.html
@@ -17,3 +17,5 @@
 رطوبت که به صورت بخار آب در هوا می باشد با درجه حرارت ترکیب گردیده، شرایط مختلف آب و هوا را سبب می گردد. ابرها خود نوعی از شرایط تغییر در آب و هوا هستند که هنگام انقباض بخار آب در بالای زمین تشکیل می شوند.وقتی که قطرات کوچک ابر بزرگتر و خیل سنگین گردیده و دیگر نگاه داری آن ها به وسیله جریان هوا ممکن نباشد، به زمین می ریزند.اگر قطرات باران از لایه یا طبقه ای از هوا یا جو که درجه حرارت آن پایین تر از درجه انجماد باشد، فرو ریزند قطرات منجمد شده و هوا برفی می گردد. گازهای اصلی موجود درهوا نیتروژن و اكسیژن هستند. نیتروژن تقریباً چهار پنجم حجم هوا را تشكیل می دهد.اكسیژن حدود یك پنجم آن را تشكیل می دهد. هوا حاوی مقادیر ریزی از گازهای دیگر مخصوصاً آرگون هم هست.</p>
 
 <p dir="rtl" style="text-align: justify;">&nbsp;</p>
+
+ <img src="https://lovearth.info/img/air.gif" alt="Air">
