--- a/air.html
+++ b/air.html
@@ -18,4 +18,4 @@
 
 <p dir="rtl" style="text-align: justify;">&nbsp;</p>
 
-<img src="https://lovearth.info/img/air.gif" alt="Air">
+<center><img src="https://lovearth.info/img/air.gif" alt="Air"></center>
