--- a/air.html
+++ b/air.html
@@ -19,4 +19,4 @@
 
 <p dir="rtl" style="text-align: justify;">&nbsp;</p>
 
-<center><img src="https://lovearth.info/img/air.gif" alt="Air"></center>
+<center><img src="https://lovearth.info/img/air.gif" alt="Air" class="responsive"></center>
