--- a/air.html
+++ b/air.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://lovearth.info/styles.css">
   <meta charset="UTF-8">
   <meta name="description" content="Many things you can do to help save our planet">
   <meta name="keywords" content="Nature, Planet, Earth , Save">
