--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <br>
 -- How? / چگونه؟ /
 <br>
-<a href="https://lovearth.info/air.html" title="هوا">هوا</a> / آب / خاک / صوت
+<a href="https://lovearth.info/air.html" title="هوا">هوا</a> / <a href="https://lovearth.info/air.html" title="water">آب</a>  / خاک / صوت
 <br>
 Soil / Air / Water / Noice
