--- a/index.html
+++ b/index.html
@@ -15,3 +15,22 @@
 <a href="https://lovearth.info/air.html" title="air">هوا</a> / <a href="https://lovearth.info/water.html" title="water">آب</a>  / خاک / صوت
 <br>
 Soil / Air / Water / Noice
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<iframe href="https://nowpayments.io/embeds/donation-widget?api_key=M1W383E-PKEMS5Y-QT8DW14-J4CGDSQ" frameborder="0" scrolling="no" style="overflow-y: hidden;" width="354" height="680"></iframe>
+
+
+
+
+
+
+
+
