--- a/index.html
+++ b/index.html
@@ -20,15 +20,11 @@ Soil / Air / Water / Noice
 
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<iframe href="https://nowpayments.io/embeds/donation-widget?api_key=M1W383E-PKEMS5Y-QT8DW14-J4CGDSQ" frameborder="0" scrolling="no" style="overflow-y: hidden;" width="354" height="680"></iframe>
 
-
-
+    <a href="https://nowpayments.io/donation?api_key=M1W383E-PKEMS5Y-QT8DW14-J4CGDSQ" target="_blank">
+     <img src="https://nowpayments.io/images/embeds/donation-button-black.svg" alt="Crypto donation button by NOWPayments">
+    </a>
+    
 
 
 
