--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@ Soil / Air / Water / Noice
 <br>
 <br>
 <br>
-Contact : 
 <br>
-lovearth.git @ hotmail . com
+<br>
+<br>
+<br>
+<br>
+Contact : lovearth.git @ hotmail . com
 
 
 
