--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Love Earth ❤️</title>
 </head>
-
+<center>
+به نام خدا ، پادشاه زمین و آسمان را ، سپاس و سپاس و سپاس ، به نام رعد و برق و دریا
+آسمون نیلگون معرفت ابرا،
+</center><br><br>
 - Why? / چرا؟ / 
 <br>
 -- How? / چگونه؟ /
