--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>Love Earth ❤️</title>
 </head>
 <center>
-به نام خدا ، پادشاه زمین و آسمان را ، سپاس و سپاس و سپاس ، به نام رعد و برق و دریا
-آسمون نیلگون معرفت ابرا،
+به نام خدا ، پادشاه زمین و آسمان را ، سپاس و سپاس و سپاس 
 </center><br><br>
 - Why? / چرا؟ / 
 <br>
