--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Love Earth ❤️</title>
 </head>
 <center>
-به نام خدا ، پادشاه زمین و آسمان را ، سپاس و سپاس و سپاس 
+به نام خدا ، پادشاه زمین و آسمان را ، سپاس . 
 </center><br><br>
 - Why? / چرا؟ / 
 <br>
