--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <title>Love Earth ❤️</title>
 </head>
 <center>
-به نام خدا ، پادشاه زمین و آسمان را سپاس 
+به نام خدا . پادشاه زمین و آسمان را سپاس
+<br>
+هر لحظه که تسلیم در کارگه تقدیر
+<br>
+آرام تر از آهو بی باک تر از شیرم
+<br>
+هر لحظه که میکوشم در کار کنم تدبیر
+<br>
+رنج از پی رنج آید زنجیر پی زنجیر 
 </center><br><br>
 - Why? / چرا؟ / 
 <br>
