--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <center>
 به نام خدا . پادشاه زمین و آسمان را سپاس
-<br>
+<br><br>
+</center>
 هر لحظه که تسلیم در کارگه تقدیر
 <br>
 آرام تر از آهو بی باک تر از شیرم
@@ -17,7 +18,7 @@
 هر لحظه که میکوشم در کار کنم تدبیر
 <br>
 رنج از پی رنج آید زنجیر پی زنجیر 
-</center><br><br>
+<br><br>
 - Why? / چرا؟ / 
 <br>
 -- How? / چگونه؟ /
