--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@ Soil / Air / Water / Noice
 <br>
 <br>
 <br>
-<br>
-Contact : lovearth.git @ hotmail . com
+<div class="footer">
+  <p>lovearth.git @ hotmail . com
+</p>
+</div>
 
 
 
