--- a/air.html
+++ b/air.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div> <a href="https://lovearth.info/">بازگشت</a>
-<center><q>عدد ذره در این جو هوا عشاقند
-<br> طرب و حالت ایشان مدد حالت توست</q></center>
+<center>عدد ذره در این جو هوا عشاقند
+<br> طرب و حالت ایشان مدد حالت توست</center>
 <p dir="rtl" style="text-align: justify;">اصولاً هوا چیست؟<br />
 <br />
 یک تعریف ساده همان چیزی است که هوا یا اتمسفر همه وقت شبیه آن است. مهم نیست که هوا سرد، خنک، گرم، داغ، آرام، نسیم وار، بادی، خشک، مرطوب یا بارانی باشد. در هر حال می تواند ترکیبی از مقداری حرارت، رطوبت و حرکت باشد.هوا ساعت به ساعت، روز به روز، فصل به فصل و حتی سال به سال تغییر می کند.هوا تركیبی از گازها است كه زمین را احاطه كرده اند.هوا اغلب جو نامیده می شود.هوا خشكی و دریا را فراگرفته و تا منطقه دوری بالای سطح زمین می رسد.ما نمی توانیم آن را ببینیم، ببوییم یا مزه كنیم. موقعی كه باد می وزد شما هوا را در مقابل بدنتان احساس می كنید.بدون هوا، امكان حیات بر روی زمین وجود نداشت. چراكه همه موجودات زنده به هوا نیاز دارند تا زنده بمانند.<br />
