--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Love Earth ❤️</title>
 </head>
 <center>
-به نام خدا . پادشاه زمین و آسمان را سپاس
+به نام خدا<br>پادشاه زمین و آسمان را سپاس
 <br><br>
 </center>
 - Why? / چرا؟ / 
@@ -18,17 +18,8 @@
 <a href="https://lovearth.info/air.html" title="air">هوا</a> / <a href="https://lovearth.info/water.html" title="water">آب</a>  / خاک / صوت
 <br>
 Soil / Air / Water / Noice
+<br>
 
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <div class="footer">
   <p>lovearth.git @ hotmail . com
 </p>
