--- a/index.html
+++ b/index.html
@@ -9,16 +9,11 @@
 </head>
 <center>
 به نام خدا<br>پادشاه زمین و آسمان را سپاس
-<br><br>
+<br>
+<a href="https://lovearth.info/air.html" title="air">هوا</a> / <a href="https://lovearth.info/water.html" title="water">آب</a>  / خاک / ...
 </center>
-- Why? / چرا؟ / 
-<br>
--- How? / چگونه؟ /
-<br>
-<a href="https://lovearth.info/air.html" title="air">هوا</a> / <a href="https://lovearth.info/water.html" title="water">آب</a>  / خاک / صوت
-<br>
-Soil / Air / Water / Noice
-<br>
+
+
 
 <div class="footer">
   <p>lovearth.git @ hotmail . com
