--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Love Earth ❤️</title>
 </head>
 <center>
-به نام خدا<br>پادشاه زمین و آسمان را سپاس
-<br>
+به نام خدا<br>آفریننده زمین و آسمان را سپاس
+<br><br><br>
 <a href="https://lovearth.info/air.html" title="air">هوا</a> / <a href="https://lovearth.info/water.html" title="water">آب</a>  / خاک / ...
 </center>
 
