--- a/water.html
+++ b/water.html
@@ -12,7 +12,7 @@
 <div> <a href="https://lovearth.info/">بازگشت</a>
 <p dir="rtl" style="text-align: justify;">آب چیست ؟</p>
 
-<p dir="rtl" style="text-align: justify;">آب فراوان ترین ماده روی سطح زمین می باشد . آب یک ماده بی رنگ و بی بو است . این ماده ضروری ترین ماده اولیه برای حیات موجودات می باشد. آب از میلیاردها مولکول تشکیل شده است , هر مولکول از یک اکسیژن و دو اتم هیدروژن ساخته شده است که توسط پیوندهای کووالانسی قوی در کنار هم نگه داشته شده اند.</p>
+<p dir="rtl" style="text-align: justify;">آب فراوان ترین <a href="https://lovearth.info/matter">ماده</a> روی سطح زمین می باشد . آب یک ماده بی رنگ و بی بو است . این ماده ضروری ترین ماده اولیه برای حیات موجودات می باشد. آب از میلیاردها مولکول تشکیل شده است , هر مولکول از یک اکسیژن و دو اتم هیدروژن ساخته شده است که توسط پیوندهای کووالانسی قوی در کنار هم نگه داشته شده اند.</p>
 
 <p dir="rtl" style="text-align: justify;">آب به سه شکل مختلف روی زمین یافت می شود</p>
 
