--- a/soil.html
+++ b/soil.html
@@ -5,13 +5,11 @@
   <meta name="keywords" content="Nature, Planet, Earth , Save">
   <meta name="author" content="Pouya">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>آب ❤️</title>
+  <title>خاک ❤️</title>
 </head>
 <body>
-<div> <a href="https://lovearth.info/water.html">بازگشت</a>
-<p dir="rtl" style="text-align: justify;">مادّه چیست ؟</p>
-<p dir="rtl" style="text-align: justify;">ماده همهٔ چیزهایی است که اشیاء فیزیکی را شامل می&zwnj;شوند و فضایی را اشغال می&zwnj;کند. معمول&zwnj;ترین تعریفی که از ماده وجود دارد این است که ماده هرچیزی است که حجم و جرم داشته باشد. به هر حال هنوز میان دانشمندان دربارهٔ تعریف دقیق ماده اتفاق نظر وجود ندارد.</p>
+<div> <a href="https://lovearth.info/">بازگشت</a>
+<p dir="rtl" style="text-align: justify;">خاک چیست ؟</p>
 
-<p dir="rtl" style="text-align: justify;">&nbsp;</p>
 </div>  
 </body>
