--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <center>
 به نام خدا<br>آفریننده زمین و آسمان را سپاس
 <br><br><br>
-<a href="https://lovearth.info/air" title="air">هوا</a> / <a href="https://lovearth.info/water" title="water">آب</a>  / خاک / ...
+<a href="https://lovearth.info/air" title="air">هوا</a> / <a href="https://lovearth.info/water" title="water">آب</a>  / <a href="https://lovearth.info/soil" title="Soil">خاک</a> / ...
 </center>
 
 
