--- a/soil.html
+++ b/soil.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <div> <a href="https://lovearth.info/">بازگشت</a>
+<center>درخت و برگ برآید ز خاک این گوید
+<br> که خواجه هر چه بکاری تو را همان روید</center>
 <p dir="rtl" style="text-align: justify;">خاک چیست ؟</p>
 
 </div>  
