--- a/soil.html
+++ b/soil.html
@@ -10,8 +10,8 @@
 <body>
 <div> <a href="https://lovearth.info/">بازگشت</a>
 <center>درخت و برگ برآید ز خاک این گوید
-<br> که خواجه هر چه بکاری تو را همان روید</center><br>
-<p dir="rtl" style="text-align: justify;">خاک چیست ؟</p>
+<br> که خواجه هر چه بکاری تو را همان روید</center>
+J<p dir="rtl" style="text-align: justify;">خاک چیست ؟</p>
 
 </div>  
 </body>
