--- a/soil.html
+++ b/soil.html
@@ -11,7 +11,7 @@
 <div> <a href="https://lovearth.info/">بازگشت</a>
 <center>درخت و برگ برآید ز خاک این گوید
 <br> که خواجه هر چه بکاری تو را همان روید</center>
-J<p dir="rtl" style="text-align: justify;">خاک چیست ؟</p>
+<p dir="rtl" style="text-align: justify;">خاک چیست ؟</p>
 
 </div>  
 </body>
